source/error/20200001/20_error.txt
/home/yenoh/term_project_2/source/STD_DIR/20200001/20.c: In function ‘main’:
/home/yenoh/term_project_2/source/STD_DIR/20200001/20.c:17:15: warning: implicit declaration of function ‘open’; did you mean ‘popen’? [-Wimplicit-function-declaration]
   17 |     if ((fd = open(fname, O_RDONLY)) < 0) {
      |               ^~~~
      |               popen
/home/yenoh/term_project_2/source/STD_DIR/20200001/20.c:17:27: error: ‘O_RDONLY’ undeclared (first use in this function)
   17 |     if ((fd = open(fname, O_RDONLY)) < 0) {
      |                           ^~~~~~~~
/home/yenoh/term_project_2/source/STD_DIR/20200001/20.c:17:27: note: each undeclared identifier is reported only once for each function it appears in
